
- handling of comments does probably not work for all cases


development version
===================

0.9.7
-----
HEAD
    + FEATURE: Started experimental implementation of `CSS Variables <http://disruptive-innovations.com/zoo/cssvariables/>`_



0.9.6 091007
    + BUGFIX: Definition of macro for `positivenum` in cssutils profiles actually did allow nagative numbers, fixed (thanks to Jason R. Coombs)

    - distribution build with `distribute <http://pypi.python.org/pypi/distribute>`_ instead of setuptools

0.9.6b5 090830
    + BUGFIX: Issue #30 fixed. Setup from source did not work.

0.9.6b4 090829
    + BUGFIX: Issue #29 fixed. Double defined namespaces are replaced with a single (the last one) now.

    - IMPROVEMENT: ``cssutils.resolveImports`` now keeps media information when to be resolved @import rule uses these. It wraps the imported rules in an @media rule which uses the same media information from the @media rule in the original sheet.

      An xml.dom.HierarchyRequestErr may occur if an imported sheet itself contains @imports with media information or other rules which are not allowed in a @media rule like @namespace rules. In that case cssutils cannot resolve the @import rule and logs a WARNING but keeps the original @import.


0.9.6b3 090802
    + **FEATURE**: Added parsing support and new profile for details defined in module Fonts http://www.w3.org/TR/css3-fonts/
        + new properties: ``font-stretch``, ``font-size-adjust``
        + @font-face rules use a different profile for validation now which uses the defined properties only:
            - ``font-family font-style font-weight`` properties redefined
            - added ``src`` and ``unicode-range`` properties
        + Added ``CSSFontFaceRule.valid``. A @font-face rule is valid if all font descriptions properties are valid and properties ``font-family`` and ``src`` are set.
