@@ -76,7 +76,7 @@ class Property(cssutils.util.Base):
         if value:
             self.cssValue = value
         else:
-            self.seqs[1] = CSSValue()
+            self.seqs[1] = CSSValue(parent=self)
 
         self._priority = u''
         self._literalpriority = u''
@@ -246,31 +246,28 @@ class Property(cssutils.util.Base):
           type of values than the values allowed by the CSS property.
         """
         if self._mediaQuery and not cssText:
-            self.seqs[1] = CSSValue()
+            self.seqs[1] = CSSValue(parent=self)
         else:
-            if not self.seqs[1]:
-                self.seqs[1] = CSSValue()
+            #if not self.seqs[1]:
+            #    self.seqs[1] = CSSValue(parent=self)
 
-            cssvalue = self.seqs[1]
-            cssvalue.cssText = cssText
-            if cssvalue.wellformed: #cssvalue._value and 
-                self.seqs[1] = cssvalue
-            self.wellformed = self.wellformed and cssvalue.wellformed
+            self.seqs[1] = CSSValue(parent=self)
+            
+            self.seqs[1].cssText = cssText
+            self.wellformed = self.wellformed and self.seqs[1].wellformed
+            # self.valid = self.valid and self.cssValue.valid
 
     cssValue = property(_getCSSValue, _setCSSValue,
         doc="(cssutils) CSSValue object of this property")
 
-
     def _getValue(self):
         if self.cssValue:
-            return self.cssValue.cssText # _value # [0]
+            return self.cssValue.cssText
         else:
             return u''
 
     def _setValue(self, value):
-        self.cssValue.cssText = value
-#        self.valid = self.valid and self.cssValue.valid
-        self.wellformed = self.wellformed and self.cssValue.wellformed
+        self._setCSSValue(value)
 
     value = property(_getValue, _setValue,
                      doc="The textual value of this Properties cssValue.")
